--- a/styles/responsive.css
+++ b/styles/responsive.css
@@ -32,6 +32,9 @@
         height: 300px;
     }
     
+    .newsImg-sm{
+        height: 200px !important;
+    }
 }
 
 @media screen and (max-width: 767px) {
@@ -42,8 +45,16 @@
         font-size: 20px;
     }
 
+    .cource-button
+ {
+    padding: 4px 8px;
+    font-size: 12px;
+    font-weight: 400;
+
    
     
+}
+
 }
 
 @media screen and (max-width: 575px) {
@@ -70,6 +81,24 @@
         font-size: 25px;
     }
 
+    .card-news h3 {
+    font-size: 16px;
+    font-weight: 400;
+    }
+    
+    .card-news p {
+    font-size: 14px;
+    line-height: 18px;
 
+    }
+
+    .mainheading-news p{
+        font-size: 14px;
+        line-height: 18px;
+    }
+
+    .mainheading-news h2{
+        font-size: 25px;
+    }
        
 }
