--- a/styles/responsive.css
+++ b/styles/responsive.css
@@ -74,14 +74,8 @@ h1{
 
 }
 
- .card-content{
-        position: static;
-    }
     
-    .newsImg-sm{
-        height: 200px !important;
-    }
-
+    
 
 
 
@@ -120,6 +114,32 @@ h1{
 .small-heading-about{
   padding-bottom: 20px;
 }
+
+
+
+}
+
+@media screen and (max-width: 991px) {
+    
+
+     .card-content{
+        position: static;
+    }
+
+    .card-body{
+        height: 300px;
+    }
+
+    .newsImg-sm1{
+        height: 300px !important;
+    }
+    
+    .newsImg-sm2{
+        height: 300px !important;
+    }
+
+
+    
 }
 
 
@@ -274,6 +294,21 @@ h1{
   font-size: 19px;
 }
 
+ .card-body{
+        height: 250px;
+    }
+
+    .newsImg-sm1{
+        height: 250px !important;
+    }
+    
+    .newsImg-sm2{
+        height: 250px !important;
+    }
+
+    .news_section{
+        padding: 25px 0px;
+    }
 
 
     
