--- a/styles/style.css
+++ b/styles/style.css
@@ -821,7 +821,7 @@ h1 {
   left: -100%;
   height: 100%;
   width: 100%;
-  background: linear-gradient( to left , #f6de07c9, #04293cdf);
+  background: linear-gradient(to left, #ddd9b2c9, #ffd900);
   z-index: -1;
   transition: left 0.5s ease;
 
@@ -832,8 +832,10 @@ h1 {
   left: 0;
 
 
+}
 
-
+.cource-button:hover {
+  color: white;
 }
 
 /* news and events  */
@@ -849,21 +851,7 @@ h1 {
   
 }
 
-.mainheading-news h2{
-  font-size: 40px;
-  font-weight: 700;
-  color: #1a325d;
-  text-transform: uppercase;
-  margin-bottom: 10px;
-}
 
-.mainheading-news p{
-  color: #7a7a7a;
-  font-weight: 400;
-  font-size: 20px;
-  line-height: 24px;
-  margin-bottom: 50px;
-}
 
 .card-news {
   border-radius: 5px;
@@ -883,20 +871,27 @@ h1 {
 
 
 .card-body{
-    background-image:url(../media/llb.jpg) ;
+    background-image:url(../images/about-img1.JPG) ;
     background-size: cover;
     background-position: center;
     border-radius: 5px;
-    height:100%;
-    filter:contrast(0.7);
+    height:70%;
 }
 
 
 
  
 
-.newsImg-sm{
-    background-image: url(../media/llm.jpg);
+.newsImg-sm1{
+    background-image: url(../images/about-img3.jpg);
+    background-size: cover;
+    background-position: center;
+    border-radius: 5px;
+}
+
+
+.newsImg-sm2{
+    background-image: url(../images/about-img6.jpg);
     background-size: cover;
     background-position: center;
     border-radius: 5px;
