--- a/styles/style.css
+++ b/styles/style.css
@@ -52,66 +52,6 @@ body{
 
 }
 
-
-.heading-main{
-    text-align: center;     
-    color: var(--primary-color);
-    font-weight: bold;
-    margin-bottom: 50px;
-    font-size: 50px ;
-    text-transform: uppercase;
-  text-wrap: balance;
-
-    
-
-}
-
-.sub-heading{
-    color: var(--text-color);
-    font-weight: 500;
-    font-size: 35px;
-    text-transform: uppercase;
-  font-family: "Libre Baskerville", serif;
-  text-wrap: balance;
-  /* font-style: italic; */
-}
-
-.small-heading{
-    color: var(--text-color);
-    font-weight: 600;
-    font-size: 30px;
-    text-decoration: none;
-    text-wrap: balance  ;
-
-}
-
-.horzontel-line{
-  height: 1px;
-  background-color: var(--paragraph-color-dark);
-}
-
-.paragraph{
-    color: var(--paragraph-color);
-    font-weight: 400;
-    font-size: 18px;
-    text-wrap: balance;
-}
-
-.sub-paragraph{
-    color: var(--text-color-light);
-    font-weight: 400;
-    font-size: 16px;
-    text-transform: capitalize;
-    text-wrap: balance;
-
-}
-
-.small-paragraph{
-    color: var(--text-color-light);
-    font-weight: 400;
-    font-size: 14px;
-    text-transform: uppercase;
-    text-wrap: balance;
 .heading-main {
   text-align: center;
   color: var(--primary-color);
@@ -160,73 +100,11 @@ body{
   color: #ffffff;
   font-weight: 300;
   font-size: 14px;
-
 }
 
 
 /* navigaiton */
 
-
-.navigation{
-    position: fixed;
-    top: 0;
-    left: 0;
-    z-index: 100;
-}
-
-.logo{
-    height: 80px;
-
-   
-}
-
-.logo-link{
-    text-decoration: none;
-}
-
-.logo-link img{
-    height: 100%;
-    width: 100%;
-    object-fit: contain;
-    object-position: center;
-}
-
-.nav-list-1{
-    list-style: none;
-}
-
-.nav-li-1{
-    position: relative;
-    padding: 10px 0;
-
-
-}
-.nav-link-1{
-    text-decoration: none;
-    color: var(--text-color-light);
-    font-weight: 500;
-    font-size: 13px;
-    text-transform: uppercase;
-    transition: var(--transition);
-    position: relative;
-    padding: 10px 0;
-}
-
-.nav-link-1::after{
-    content:" ";
-    position: absolute;
-    height: 1px;
-    width: 100%;
-    bottom: 0px;
-    left: 0px;
-    background-color: var(--secondary-color);
-    transform: scaleX(0);
-    transition: var(--transition);
-    
-}
-
-.nav-link-1:hover::after{
-    transform: scaleX(1);
 .navigation {
   position: fixed;
   top: 0;
@@ -288,7 +166,6 @@ body{
 
 .nav-link-1:hover::after {
   transform: scaleX(1);
-
 }
 
 
@@ -296,70 +173,6 @@ body{
 
 
 
-
-.helpline-no{
-    border-radius: 10px;
-    background-color: #ffffff6e;
-}
-.helpline-no-1{
-    text-decoration: none;
-    color: var(--text-color-light);
-    padding-right: 65px !important;
-    
-}
-
-.helpline-no-1 img{
-    width: 40px;
-}
-
-.helpline-no i{
-    font-size: 30px;
-}
-
-.helpline-no-1 i{
-    padding: 14px;
-    border: 1px solid var(--secondary-color);
-    border-radius: 50%;
-    font-size: 18px;
-}
-
-.bar{
-    width: 30px;
-    cursor: pointer;
-    gap: 10px;
-}
-
-.line-bar{
-    background-color: var(--secondary-color);
-    height: 2px;
-    width: 100%;
-}
-
-.lower-header{
-    border-radius: 10px;
-    background-color: #ffffff6e;
-    padding: 12px 0;
-}
-
-.nav-list-2{
-    list-style: none;
-
-}
-
-.nav-link-2{
-    text-decoration: none;
-    color: var(--text-color-light);
-    font-size: clamp(15px, 1.2vw, 17px);
-    font-weight:600;
-    text-transform: uppercase;
-    display: flex;
-    align-items: center;
-    gap: 3px;
-
-}
-
-.nav-link-2 i{
-    font-size: 12px;
 .helpline-no {
   border-radius: 10px;
   background-color: #ffffff6e;
@@ -424,48 +237,11 @@ body{
 
 .nav-link-2 i {
   font-size: 12px;
-
 }
 
 
 /* ul tag inner start  */
 
-
-.nav-list-1-1{
-    position: absolute;
-    list-style: none;
-    width:max-content;
-    padding:  20px 80px 50px 20px ;
-    border-radius:10px ;
-    background-color: var(--secondary-color);
-    backdrop-filter: blur(5px);
-    left: -150px;
-    z-index: 100;
-    top: 100%;
-    opacity: 0;
-    transform: translateY(50px);
-    transition: var(--transition);
-    visibility: hidden;
-   
-}
-
-.nav-li-1:hover .nav-list-1-1{
-    opacity: 1;
-    transform: translateY(0);
-    visibility: visible
-    
-
-}
-
-.nav-link-1-1{
-    text-decoration: none;
-    color: var(--text-color-dark);
-    font-weight: 500;
-    font-size: 18px;
-    text-transform:uppercase ;
-    transition: var(--transition);
-
-   
 .nav-list-1-1 {
   position: absolute;
   list-style: none;
@@ -499,18 +275,10 @@ body{
   transition: var(--transition);
 
 
-
 }
 
 
 
-    /* courss */
-
-    .college-section{
-        padding: 50px 0px 50px 0px;
-        background-color:rgb(236, 235, 237);
-    }
-        
 
 
 
@@ -977,7 +745,6 @@ h1 {
         /* background-color:rgb(236, 235, 237); */
         margin-top: 100px;
 
-
     }
 
     .program{
@@ -1036,15 +803,9 @@ h1 {
         text-transform: uppercase;
     }
 
-    
-.cource-button {
-  padding: 8px 15px;
-  background-color: #f6dd07;
-
 .cource-button {
   padding: 9px 16px;
   background-color: #f1c400;
-
   border-radius: 5px;
   border: none;
   color: black;
@@ -1052,12 +813,8 @@ h1 {
   overflow: hidden;
   cursor: pointer;
   z-index: 1;
-
-  font-size: 16px;
-  font-weight: 600;
   font-size: 14px;
   font-weight: 450;
-
 
   text-transform: uppercase;
   transition: all 0.3s ease;
@@ -1071,7 +828,6 @@ h1 {
   left: -100%;
   height: 100%;
   width: 100%;
-  background: linear-gradient( to left , #f6de07, #000000);
   background: linear-gradient(to left, #ddd9b2c9, #ffd900);
   z-index: -1;
   transition: left 0.5s ease;
@@ -1083,40 +839,7 @@ h1 {
   left: 0;
 
 
-
-
-
 }
-
-.cource-button:hover{
-  color: #fff;
-}
-
-
-
-
-/* css delete >> */
-
-.mean-heading-about {
-  font-size: clamp(40px, 4.2vw, 48px);
-  color: #002147;
-  font-weight: 700;
-}
-
-.para {
-  color: #7a7a7a;
-  font-size: clamp(13px, 3vw, 16px);
-}
-
-.small-heading-about{
-  color: #7a7a7a;
-    font-size: 19px;
-    font-weight: 400;
-    text-transform: uppercase;
-
-
-}
-
 
 .cource-button:hover {
   color: white;
@@ -1131,24 +854,6 @@ h1 {
 
 .news_section{
   padding: 50px 0px 50px 0px;
-  background-color:rgb(236, 235, 237);
-  
-}
-
-.mainheading-news h2{
-  font-size: 40px;
-  font-weight: 700;
-  color: #1a325d;
-  text-transform: uppercase;
-  margin-bottom: 10px;
-}
-
-.mainheading-news p{
-  color: #7a7a7a;
-  font-weight: 400;
-  font-size: 20px;
-  line-height: 24px;
-  margin-bottom: 50px;
   background-color:#ecebed;
   
 }
@@ -1169,27 +874,7 @@ h1 {
 
 
 
-.news_section .card-news{
-    border-radius: 5px;
-    overflow: hidden;
-    background-color: whitesmoke;
-    box-shadow: 0px 0px 5px #00000027;
-}
 
-.card-body{
-    
-    background-image:url(../media/llb.jpg) ;
-    background-size: cover;
-    background-position: center;
-    border-radius: 5px;
-    height: 60%;
-}
-
- 
-
-.newsImg-sm{
-    background-image: url(../media/llm.jpg);
-}
 
 .card-body{
     background-image:url(../images/about-img1.JPG) ;
@@ -1225,13 +910,20 @@ h1 {
     color: #000;
 }
 
+/* .card-news  p{
+    color: #7a7a7a;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 18px;
+    margin-bottom: 10px;
+} */
 
 .card-content h3{
 
     color: #fff;
 }
 
-.card-content p{
+.card-content  p{
     color: #fff;
    
 }
