--- a/styles/style.css
+++ b/styles/style.css
@@ -748,23 +748,20 @@ h1 {
     }
 
     .program{
-        background-color: #554ee9;
         border-radius: 5px;
         color: #ffffff;
         border: none;
         text-transform: uppercase;
     }
 
-    .cource-card{
-      height: 500px;
-      border-radius: 10px;
-      overflow: hidden;
-      background-color: rgb(10, 10, 60);
-      position: relative;
-      box-shadow: 0px 0px 5px #00000027;
-      transition: all 0.3s ease;
+    .cource-card {
+    height: 500px;
+    border-radius: 15px;
+    overflow: hidden;
+    position: relative;
+    box-shadow: 0px 0px 10px #0000005c;
+    transition: all 0.3s ease;
     }
-
     .cource-card:hover{
         scale: 1.02;
     }
@@ -778,8 +775,9 @@ h1 {
       object-fit: cover;
       z-index: 1;
       object-position: bottom;
-      filter: contrast(0.7);
       transition: all 0.3s ease;
+      filter: contrast(0.7);
+
 
     }
 
@@ -804,7 +802,7 @@ h1 {
     }
 
 .cource-button {
-  padding: 9px 16px;
+  padding: 8px 16px;
   background-color: #f1c400;
   border-radius: 5px;
   border: none;
@@ -926,4 +924,123 @@ h1 {
 .card-content  p{
     color: #fff;
    
+}
+
+/* footer  */
+
+.footer{
+    padding-top: 50px  ;
+    background: #04123c;
+    background: linear-gradient(to top, #030f35, #1e3a6e);
+  
+}
+
+
+.footer-links{
+  display: flex;
+  flex-direction: column;
+  gap: 30px;
+
+}
+
+.footer-links ul{
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+
+.footer-links h2{
+  color: white;
+  font-size: clamp(1rem, 5vw, 1.5rem);
+  font-weight: 500;
+  position: relative;
+  text-transform: uppercase;
+}
+
+.footer-heading{
+  margin-bottom: 20px;
+  border-radius: 10px;
+}
+
+.footer-heading img{
+  height: 100px;
+  filter: drop-shadow(0px 4px 4px rgba(255, 255, 255, 0.792));
+}
+
+.footer-heading h2{
+  font-size: clamp(1rem, 5vw, 4rem);
+  font-weight: 500;
+  position: relative;
+  text-transform: uppercase;
+  color: #fff;
+}
+
+.footer-links h2::after{
+  content: "";
+  position: absolute;
+  bottom: -10px;
+  left: 0;
+  width: 100%;
+  height:0.01rem;
+  background-color: #ffffff5e;
+}
+
+.footer-links a{
+  color: #666;
+  text-decoration: none;
+  font-size: clamp(0.8rem, 5vw, 1.3rem);
+  font-weight: 400;
+  margin-top: 10px;
+  transition: all 0.3s ease;
+}
+
+.footer-links a:hover{
+  color: #fff;
+}
+
+.location-footer{
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+
+.location-footer p{
+  color: #666;
+  font-size: 18px;
+  font-weight: 400;
+}
+
+.location-footer a{
+  color: #fff;
+  text-decoration: none;
+  font-size: 16px;
+  font-weight: 400;
+  margin: 0;
+}
+
+.social-media{
+  margin-top: 50px;
+  gap: 10px;
+  border-top:1px solid #666;
+  /* border-bottom:1px solid #666; */
+}
+
+.social-media h2{
+  color: white;
+  font-size: clamp(1rem, 5vw, 1.5rem);
+  font-weight: 500;
+  position: relative;
+  text-transform: uppercase;
+}
+
+
+.social-media ul{
+  list-style: none;
+}
+
+.social-media a{
+  text-decoration: none;
+  color: #666;
+  font-size: clamp(1rem, 8vw, 1.5rem);
+  font-weight: 400;
 }
