--- a/styles/style.css
+++ b/styles/style.css
@@ -931,7 +931,7 @@ h1 {
 .footer{
     padding-top: 50px  ;
     background: #04123c;
-    background: linear-gradient(to top, #030f35, #1e3a6e);
+    background: linear-gradient(to top, #04123c, #04123c, #102257);
   
 }
 
