--- a/styles/style.css
+++ b/styles/style.css
@@ -851,7 +851,7 @@ h1 {
 
 
 .news_section{
-  padding: 50px 0px 50px 0px;
+  padding: 50px 0px 100px 0px;
   background-color:#ecebed;
   
 }
@@ -932,7 +932,8 @@ h1 {
     padding-top: 50px  ;
     background: #04123c;
     background: linear-gradient(to top, #04123c, #04123c, #102257);
-  
+    position: relative;
+    border-radius: 0px 50px 0 50px;
 }
 
 
@@ -940,6 +941,7 @@ h1 {
   display: flex;
   flex-direction: column;
   gap: 30px;
+  margin-top: 30px;
 
 }
 
@@ -958,8 +960,16 @@ h1 {
 }
 
 .footer-heading{
-  margin-bottom: 20px;
+  /* margin-bottom: 20px; */
   border-radius: 10px;
+  position: absolute;
+  top: -50px;
+  left: 50%;
+  transform: translateX(-50%);
+  width: 100px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .footer-heading img{
@@ -1013,8 +1023,8 @@ h1 {
 .location-footer a{
   color: #fff;
   text-decoration: none;
-  font-size: 16px;
-  font-weight: 400;
+  font-size: 14px;
+  font-weight: 300;
   margin: 0;
 }
 
@@ -1041,6 +1051,6 @@ h1 {
 .social-media a{
   text-decoration: none;
   color: #666;
-  font-size: clamp(1rem, 8vw, 1.5rem);
+  font-size: clamp(0.8rem, 8vw, 1.5rem);
   font-weight: 400;
 }
